# agent-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  COLLAB.md  CREDITS.md  DESIGN.md  README.md  ROADMAP.md  TASKS.md  pyproject.toml  setup_py2app.py
.agents/skills/auto/: SKILL.md
.agents/skills/propose/: SKILL.md
.claude/: WORKFLOW.md  settings.json
.claude/agents/: auto-orchestrator.md  frontend-dev.md  imagineer.md  pixel-artist.md  product-strategist.md  scene-tester.md  ui-critic.md
.claude/scratch/: README.md
.claude/skills/auto/: SKILL.md
.claude/skills/propose/: SKILL.md
.codex/: hooks.json
.codex/agents/: auto-orchestrator.toml  frontend-dev.toml  pixel-artist.toml  product-strategist.toml  scene-tester.toml  ui-critic.toml
.codex/hooks/: post-edit-screenshot.sh  pre-commit-check.sh  pre-compact-save.sh  stop-notify.sh
.cursor/rules/: agentville.mdc  frontend.mdc
.githooks/: pre-commit
agent_dashboard/: __main__.py  _app_launcher.py  build_app.py  launchagents.py  ui_app.py  ui_menubar.py  ui_tui.py
agent_dashboard/core/: codex_parser.py  codex_usage.py  cursor_parser.py  cursor_usage.py  model.py  parser.py  store.py  usage.py  watcher.py  wt_status.py
agent_dashboard/ui_web/: server.py
agent_dashboard/ui_web/static/: app.js  index.html  style.css
tests/: test_codex_parser.py  test_cursor_parser.py  test_cursor_usage.py  test_parser.py  test_server_healthz.py  test_store_town.py  test_watcher_incremental.py
tests/fixtures/: malformed_edge.jsonl  sample.jsonl  sidechain_subagent.jsonl
tools/: dispatch.sh  png_to_grid.py
(+3 files in other folders)
